# AI-wemedia-baby

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  _write_bat.py  build.bat  main.py  pyproject.toml  pytest.ini  requirements.txt  version.bat
.agent/rules/: custom_rules.md  wemedia-baby.code-workspace
config/: __init__.py  app_config.json  feature_flags.py
config/selectors/: douyin_selectors.json
docs/: 发布列表功能优化文档.md  抖音发布插件DOM对照表.md
docs/01总文档/: 1.0用户需求及功能实现记录.md  1.1技术文档.md  1.2开源策略方案.md  1.3软件打包实施方案.md  1.4项目目录结构说明.md  1.5双仓库实施指南.md  1.6产品需求文档_PRD.md  1.7代码文件结构说明.md  Git协作与多设备使用指南.md
docs/02各页面功能介绍/: 2.1工作台.md  2.2-0账号管理.md  2.2-1auto_nickname_extraction.md  2.2-2account_refresh_mechanism.md  2.2-3fingerprint_browser.md
docs/03分项功能介绍技术文档/: 3.1数据目录结构说明.md  3.3防风控与稳定发布功能说明.md
docs/03分项功能技术文档/: 3.1数据目录结构说明.md  3.2douyin_publish_automation.md  刷新登录状态功能介绍与优化方案.md  账号库功能技术方案.md
docs/03插件系统/: 3.0各平台插件功能介绍.md  3.1抖音插件功能介绍.md  3.2抖音发布流程图.md  3.3抖音视频发布封面设置步骤流程说明.md  防风控机制设计.md
docs/04功能优化方案/: 发布任务流程优化方案.md
docs/04数据库架构/: WeMedia_X-Ray数据库架构综合优化与重构方案.md  业务场景调用分析及优化方案.md  数据库功能说明及优化方案.md  更好数据库方案评估报告.md
docs/其他/: Software_Functional_Specs.md
installers/inno_setup/: setup_script.iss
scripts/: build_app.bat  build_menus.bat  update_version.bat  version_manager.bat
src/: __init__.py  version.py
src/ui/: __init__.py  (+3 more)
tests/: check_paths.py  conftest.py  verify_directory_structure.py
tools/: fix_broken_files.py  fix_broken_files2.py  fix_broken_files3.py  fix_broken_files4.py  fix_gbk_files.py  fix_paths_temp.py  query_douyin_accounts.py
(+257 files in other folders)
