[project]
name = "wemedia-baby"
version = "1.0.2"
description = "一款面向自媒体创作者的专业批量发布工具"
authors = [
    {name = "媒小宝团队", email = "185034202@qq.com"}
]
dependencies = [
    "PySide6>=6.4.0",
    "PySide6-Fluent-Widgets>=1.5.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "APScheduler>=3.10.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
